fix footer align

--- a/web_static/styles/3-common.css
+++ b/web_static/styles/3-common.css
@@ -1,4 +1,7 @@
 body{
-    margin:0;
-    padding:0;
+    margin: 0;
+    padding: 0;
+    text-decoration-color: #484848;
+    font-size: 14px;
+    font-family: Arial, Helvetica, sans-serif;
 }
